@@ -1,5 +1,13 @@
 2006-02-12  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/bookmarks/ephy-bookmark-factory-action.c:
+	(build_menu_for_topic):
+	* src/bookmarks/ephy-topic-factory-action.c: (build_menu):
+
+	Strdup the action name data.
+
+2006-02-12  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb),
 	(node_removed_cb):
 
